3/1/2005 autofs-4.1.4_beta1
---------------------------
- fix error in define of mtab lock file.
- fix mischief caused by change in default strict -> nonstrict.
- fix replicated server detection (TCP/UDP/NFSv2/NFSv3) logic (Jeff Moyer and Ian Kent).
- fix error when setting pwd.
- fix socket leak (Jeff Moyer and Ian Kent).
- fix potential race in signal handling code (Jeff Moyer).
- miscelaneous corrections to doco and typos (Peter Breitenlohner).
- fix i18n init script underline output (Jeff Moyer).
- fix logic error in replicated server selection (Jeremy Rosengren and Ian Kent).
- the map change detection patch
    - note this requires a kernel patch to work, see README.patches.
- correct whitespace handling in maps.
- mount table handling cleanup.
- fix multi map lookup broken after the map update patch.
- fix auto master map concatenation bug (Jeff Moyer).
- merge some Debian patches (Arthur Korn)
    - 032 remove trailing slash in mount_afs.c.
    - 033 support hesiod priorities in lookup_hesiod.c.
    - 034 handle empty options in changer ,ext2 and generic modules.
    - 035 program mount repeated last character of map output.
    - 036 make make fail on failure.
- fix memory leak in cache_clean function (Jeff Moyer).
- remove restriction of mounting ncpfs filesystems (Mike Fleetwood).
    - see README.ncpfs.
- second signal race fix (almost what Chris Feist recommended).
- fix the ordering of +ypmapname entries in master map (Chris Feist).
- fix backslash parse for smb mount option username\password (George Hansper).
- keep udp rpc ping routine from using up reserved ports (Jeff Moyer).
- maintain backwards compatibility w/ local file maps (Chris Feist).
- init script fix (Arthur Korn).
- fix duplicate map handling in init script (Chris Feist).
- force local map paths to begin with / (Chris Feist).
- allow for LDAP maps that have greater than the LDAP result count limit (Chris Feist).