@@ -1,0 +1,25 @@
+#!/bin/sh
+
+# $Id: auto.smb,v 1.1 2005/01/04 14:36:54 raven Exp $
+
+# This file must be executable to work! chmod 755!
+
+key="$1"
+opts="-fstype=smbfs"
+
+for SMBCLIENT in /{,usr/}{,s}bin/smbclient
+do
+	if [ -x $SMBCLIENT ]
+	then
+		break
+	fi
+done
+
+[ -x $SMBCLIENT ] || exit 1
+
+$SMBCLIENT -gNL $key 2>/dev/null| awk -v key="$key" -v opts="$opts" -F'|' -- '
+	BEGIN	{ ORS=""; first=1 }
+	/Disk/	{ if (first) { print opts; first=0 }; print " \\\n\t /" $2, "://" key "/" $2 }
+	END 	{ if (!first) print "\n"; else exit 1 }
+	'
+
